<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="43dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Drone design"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/rule1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/ddR1"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/rule2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rule1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="@string/ddR2"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/rule3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rule2"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="@string/ddR3"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/rule4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rule3"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="@string/ddR4"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/rule5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rule4"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="@string/ddR5"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rule5"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="Drone Racing"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/rrule1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title2"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="@string/drR1"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/rrule2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rrule1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="@string/drR2"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/rrule3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rrule2"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="@string/drR3"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/rrule4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rrule3"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="@string/drR4"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/rrule5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rrule4"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="@string/drR5"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/rrule6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rrule5"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="@string/drR6"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rrule6"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="Judging and Marshaling"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/rrrule1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title3"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="@string/jmR1"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/rrrule2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rrrule1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="@string/jmR2"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/rrrule3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rrrule3"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="@string/jmR3"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/title4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rrrule3"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="Dormitory"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/rrrrule1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title4"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="@string/dR1"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/rrrrule2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rrrrule1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="@string/dR2"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/note"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rrrrule1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:text="*Any violation of rule could result a possibility of immediate disqualification."
                android:textColor="@color/black"
                android:textSize="20dp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


        <Button
            android:id="@+id/scan_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="scan"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/sponsors_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Sponsors"
            android:textColor="@android:color/black" />


    </LinearLayout>


</RelativeLayout>